networks/mainnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-core-mainnet-graph
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.org/websocket-services: "persistencecore-graph-node"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - secretName: cloudflare-tls-persistence
      hosts:
        - graph.dex.persistence.one
  rules:
    - host: graph.dex.persistence.one
      http:
        paths:
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: persistencecore-graph-node
                port:
                  number: 8000
          - path: /ws(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: persistencecore-graph-node
                port:
                  number: 8001
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-core-mainnet-hasura
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - secretName: cloudflare-tls-persistence
      hosts:
        - api.dex.persistence.one
  rules:
    - host: api.dex.persistence.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dexter-hasura
                port:
                  number: 8080
  ingressClassName: nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-core-mainnet-hasura-dexter-base-old
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - secretName: cloudflare-tls
      hosts:
        - api.core-1.dexter.zone
  rules:
    - host: api.core-1.dexter.zone
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dexter-hasura
                port:
                  number: 8080
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-core-mainnet-hasura-dexter-base-old-next
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - secretName: cloudflare-tls
      hosts:
        - api-next.core-1.dexter.zone
  rules:
    - host: api-next.core-1.dexter.zone
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dexter-hasura
                port:
                  number: 8080
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-core-mainnet-hasura-dexter-base-old-api2
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - secretName: cloudflare-tls
      hosts:
        - api2.core-1.dexter.zone
  rules:
    - host: api2.core-1.dexter.zone
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dexter-hasura
                port:
                  number: 8080
  ingressClassName: nginx
